新規画面の追加

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
         <activity android:name=".LogoutActivity"
             android:parentActivityName=".HomeActivity"></activity>
 
+        <activity android:name=".TimerActivity"></activity>
+        <activity android:name=".ConfigActivity"></activity>
+
     </application>
 
 </manifest>
