--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,8 +28,10 @@
 
         </activity>
 
-        <activity android:name=".TimerActivity"></activity>
-        <activity android:name=".ConfigActivity"></activity>
+        <activity android:name=".TimerActivity"
+            android:parentActivityName=".HomeActivity"></activity>
+        <activity android:name=".ConfigActivity"
+            android:parentActivityName=".HomeActivity"></activity>
 
         <activity android:name=".UserConfigActivity"
             android:parentActivityName=".HomeActivity"></activity>
