--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:name=".ConfigItem">
+        android:name=".dataPackage.UserData">
         <activity android:name=".SplashActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar">
 
